--- a/modules/specialized-guides/pages/public-cloud-guide/byos/setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/byos/setup.adoc
@@ -1,6 +1,8 @@
 [[quickstart-publiccloud-setup]]
 = Initial Setup
 
+== Introduction
+
 This guide shows you the fastest way to get {productname} up and running in a public cloud using on-demand or {byos} services.
 We have tested using {productname} on Amazon EC2, Google Compute Engine, and Microsoft Azure, but these procedures should work with other public cloud providers as well, with some variation.
 
@@ -39,7 +41,6 @@ When you have your virtual machine ready, and the {byos} image installed, you ne
 This is done in the same way as a local installation, using {yast}.
 When you have completed {productname} setup, you need to activate the public cloud module.
 You can then complete the setup in the {productname} {webui}.
-
 
 
 == {productname} Proxy
