--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-configure-the-image.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-configure-the-image.adoc
@@ -1,4 +1,4 @@
-= Initial Preparation and Configuration of the AWS Image
+= {aws} Image Preparation and Configuration
 
 This section covers initial preparation and configuration of the image on {aws}.
 
