--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc
@@ -1,12 +1,12 @@
-= Obtaining the {productname} Server {payg} public cloud image on AWS
+= Obtaining the {productname} Server {payg} Public Cloud Image on {aws}
 
 Follow these step-by-step instructions to locate the SUSE Manager {productnumber} {payg} image on {aws}.
 You can also review the latest available images for the public cloud using Pint (Public Cloud Information Tracker).
 
-See: link:https://pint.suse.com/[pint.suse.com]
+For more information see: link:https://pint.suse.com/[pint.suse.com]
 
 
-.Procedure: Obtaining the {productname} {payg} image on AWS
+.Procedure: Obtaining the {productname} {payg} Image on {aws}
 
 . In your browser navigate to the link:https://aws.amazon.com/console/[AWS Management Console].
 
