--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-server-setup.adoc
@@ -19,6 +19,7 @@ transactional-update
 
 This tool simplifies creating the container storage and database volumes.
 
+.Procedure
 . Format the command in the following manner: 
 +
 
