--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -22,7 +22,7 @@ ifeval::[{suma-content} == true]
 ***** xref:public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc[1. Obtaining Public Cloud Image]
 ***** xref:public-cloud-guide/payg/aws/payg-aws-configure-the-image.adoc[2. Image Preparation and Configuration]
 ***** xref:public-cloud-guide/payg/aws/payg-aws-server-setup.adoc[3. Server Setup]
-***** xref:public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc[4. WebUI Configuration]
+***** xref:public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc[4. {webui} Configuration]
 ***** xref:public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc[5. Connecting Clients and Client Registration]
 **** {payg} on Azure
 ***** xref:public-cloud-guide/payg/azure/payg-azure-requirements.adoc[Azure requirements]
