--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
@@ -1,4 +1,4 @@
-= {payg} Client Connections and Client Registration
+= Connecting {payg} Clients and Client Registration
 
 == Managing Connections and Registering {payg} and {byos} images
 
