--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc
@@ -1,5 +1,4 @@
-= SUSE Manager {payg} {webui} setup 
-
+= SUSE Manager {payg} {webui} Configuration 
 
 == Requirements
 
@@ -16,7 +15,7 @@ Its presence is crucial, as it determines the status of {payg} instances.
 When invoked, this tool identifies and categorizes the system as a {payg} instance. 
 By default this tool is configured to run on a schedule named **update-payg-default**.
 
-update-payg-default schedule task::
+update-payg-default Schedule Task::
 Navigate to the menu:Admin[Task Schedules] to find the **update-payg-default** task. 
 By default, this task is set to run at 10-minute intervals. 
 Its primary function is to monitor the presence of all running {payg} instances by executing the **instance-flavor-check tool**.
