(HW2024 cleanup) Formatting and use of parameters in the public cloud files - Pt. 2 (#3480)
* Formatting and use of parameters in the public cloud files.

* Further normalization.

* Cont.

* Cont.

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -11,18 +11,18 @@ endif::[]
 
 ifeval::[{suma-content} == true]
 ** xref:public-cloud-guide/overview.adoc[Public Cloud Guide]
-*** xref:public-cloud-guide/byos/byos-overview.adoc[BYOS Guide]
+*** xref:public-cloud-guide/byos/byos-overview.adoc[{byos} Guide]
 **** xref:public-cloud-guide/byos/setup.adoc[Initial Setup]
-**** xref:public-cloud-guide/byos/clients.adoc[Client Configuration]
+**** xref:public-cloud-guide/byos/clients.adoc[Client Registration]
 *** {payg} Guide
 **** xref:public-cloud-guide/payg/payg-overview.adoc[{payg} Overview]
 **** xref:public-cloud-guide/payg/payg-limitations.adoc[{payg} Limitations]
 **** {payg} on AWS
-***** xref:public-cloud-guide/payg/aws/payg-aws-requirements.adoc[AWS requirements]
-***** xref:public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc[1. Public Cloud Images]
-***** xref:public-cloud-guide/payg/aws/payg-aws-configure-the-image.adoc[2. Configuration and Startup]
+***** xref:public-cloud-guide/payg/aws/payg-aws-requirements.adoc[AWS Requirements]
+***** xref:public-cloud-guide/payg/aws/payg-aws-public-cloud-images.adoc[1. Obtaining Public Cloud Image]
+***** xref:public-cloud-guide/payg/aws/payg-aws-configure-the-image.adoc[2. Image Preparation and Configuration]
 ***** xref:public-cloud-guide/payg/aws/payg-aws-server-setup.adoc[3. Server Setup]
-***** xref:public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc[4. WebUI Configuration]
+***** xref:public-cloud-guide/payg/aws/payg-aws-webui-configuration.adoc[4. {webui} Configuration]
 ***** xref:public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc[5. Connecting Clients and Client Registration]
 **** {payg} on Azure
 ***** xref:public-cloud-guide/payg/azure/payg-azure-requirements.adoc[Azure requirements]
