--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-server-setup.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-server-setup.adoc
@@ -1,8 +1,7 @@
 [[aws-server-setup]]
-= Initial setup
+= Server Setup
 
-
-.Procedure: Login and update the system
+.Procedure: Log in and Update the System
 . SSH into your {AWS} instance.
 
 . Switch to the root user and update the system.
@@ -20,16 +19,17 @@ transactional-update
 
 This tool simplifies creating the container storage and database volumes.
 
-
-
+.Procedure
 . Format the command in the following manner: 
 +
 
 ----
 mgr-storage-server <storage-disk-device> [<database-disk-device>]
-
-#For example: 
-
+----
++
+For example: 
++
+----
 mgr-storage-server /dev/nvme1n1 /dev/nvme2n1
 ----
 +
