--- a/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/payg-overview.adoc
@@ -3,7 +3,7 @@
 {payg} does not require a long-term subscription. 
 Users can leverage the images of {productname} on a {payglongform} basis, paying only for the time of use, and the number of managed and monitored systems. 
 {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on AWS, Azure, and GCP.
-:keywords: Payg, Pay-as-you-go, AWS, Amazon Web Services, Azure, GCP, Google Cloud Compute,  cost-effective, scaling, Cloud Services, {productname}, Monitoring
+//:keywords: Payg, Pay-as-you-go, AWS, Amazon Web Services, Azure, GCP, Google Cloud Compute,  cost-effective, scaling, Cloud Services, {productname}, Monitoring
 
 
 == Introduction to {payg}
@@ -14,10 +14,11 @@ Users can leverage images of {productname} on a {payglongform} basis, paying onl
 
 {payg} with {productname} is an optimal solution for those seeking control, convenience, and cost savings when managing and monitoring their infrastructure on {awslongform}, {azure}, and {gcplongform}.
 
-. Obtaining a SUSE Manager Server Subscription (optional)
+
+.Obtaining a SUSE Manager Server Subscription (optional)
 [IMPORTANT]
 ====
-For customers running 10 or more {payg} SLES for SAP Applications instances who also wish to access the SUSE Manager (SUMA) BYOS Lifecycle subscription, an email must be sent to susemanagerkey@suse.com. 
+For customers running 10 or more {payg} SLES for SAP Applications instances who also wish to access the SUSE Manager (SUMA) {byos} Lifecycle subscription, an email must be sent to susemanagerkey@suse.com. 
 The email should include proof of at least 10 active SLES for SAP {payg} instances, such as a screenshot of the relevant section of their cloud console. 
 The subscription key is valid for one year and can be renewed by providing updated proof of the instances at the end of the subscription period.
 ====
