--- a/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
+++ b/modules/specialized-guides/pages/public-cloud-guide/payg/aws/payg-aws-connections-and-bootstrapping.adoc
@@ -1,19 +1,20 @@
-= {payg} Client connections and Client Registration
+= Connecting {payg} Clients and Client Registration
 
-== Managing connections and registering {payg} and BYOS images
+== Managing Connections and Registering {payg} and {byos} images
 
 {payg} ({payglongform}) Images::
 Connecting and registering {payg} images is supported and can be done without additional prerequisites.
 
 
 {byos} ({byoslongform}) Images::
-Registering BYOS images requires SCC ({scc}) credentials beforehand. If a user attempts to onboard a BYOS image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
+Registering {byos} images requires SCC ({scc}) credentials beforehand. 
+If a user attempts to onboard a {byos} image without providing SCC credentials, the operation will fail, as these credentials are required to verify your subscription.
 
 [IMPORTANT]
 ====
 * Always verify the type of image ({payg} or {byos}) prior to initiating the registration process with {productname} to ensure a smooth and error-free connection.
 
-* If you have SCC credentials ensure your SCC credentials are valid and have the necessary permissions for utilizing BYOS images.
+* If you have SCC credentials ensure your SCC credentials are valid and have the necessary permissions for utilizing {byos} images.
 
 **Do not** register {payg} instances with the {scc}.
 Only {byos} instances should be registered against the {scc}.
@@ -24,12 +25,12 @@ Only {byos} instances should be registered against the {scc}.
 
 
 
-== Starting Up Additional {payg} {suse} products in {aws}
+== Starting Up Additional {payg} {suse} Products in {aws}
 
 For more information on using {suse} {payg} products such as {sle} in the public cloud see: link:https://documentation.suse.com/sle-public-cloud/all/html/public-cloud/cha-intro.html[SUSE Linux Enterprise Public Cloud Guide]
 
 
-== Establishing a {payg} {sle} connection with {productname} {payg}
+== Establishing a {payg} {sle} Connection with {productname} {payg}
 
 [IMPORTANT]
 ====
