--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -61,7 +61,10 @@ After the migration, it will be necessary to manually update the DHCP and DNS re
 
 [IMPORTANT]
 ====
-The migration can take a very long time depending on the amount of data that needs to be replicated. To reduce downtime it is possible to run the migration multiple times in a process of "initial replication", "re-replication", "final replication and switch over" while all the services on the source can stay up and running and only during the final migration the processes on the source need to be stopped. For all "non-final" replications add the parameter [command]``--prepare`` needs to be added to to prevent the automatic stopping the services on the source server. I.e. use [command]``mgradm migrate podman <oldserver.fqdn> --prepare`` to prevent the automatic stopping the services on the source.
+The migration can take a very long time depending on the amount of data that needs to be replicated.
+To reduce downtime it is possible to run the migration multiple times in a process of "initial replication", "re-replication", "final replication and switch over" while all the services on the source can stay up and running and only during the final migration the processes on the source need to be stopped.
+For all "non-final" replications add the parameter [command]``--prepare`` to prevent the automatic stopping the services on the source server.
+For example, use [command]``mgradm migrate podman <oldserver.fqdn> --prepare`` to prevent the automatic stopping the services on the source server.
 ====
 
 .Procedure: Initial preparation on the 4.3 server
