--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -75,7 +75,7 @@ mgradm migrate podman <oldserver.fqdn> --prepare
 ----
 ====
 
-.Procedure: Initial preparation on the 4.3 server
+.Procedure: Initial Preparation on the 4.3 Server
 . Stop the {productname} services:
 +
 ----
@@ -177,6 +177,7 @@ mgradm migrate podman <oldserver.fqdn>
 
 
 ==== Migration of the Certificates
+
 Trusted SSL CA certificates that were installed as part of an RPM and stored on {productname} 4.3 in the [path]``/usr/share/pki/trust/anchors/`` directory will not be migrated.
 Because {suse} does not install RPM packages in the container, the administrator must migrate these certificate files manually from the 4.3 installation after the migration.
 
