--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
@@ -54,7 +54,7 @@ mgradm migrate podman <oldserver.fqdn> --prepare
 ----
 ====
 
-.Procedure: Initial preparation on the legacy server
+.Procedure: Initial Preparation on the Legacy Server
 
 . Stop the {productname} services:
 +
@@ -147,6 +147,7 @@ mgradm migrate podman <oldserver.fqdn>
 
 
 ==== Migration of the Certificates
+
 Trusted SSL CA certificates that were installed as part of an RPM and stored on a legacy {productname} in the [path]``/usr/share/pki/trust/anchors/`` directory will not be migrated.
 Because {suse} does not install RPM packages in the container, the administrator must migrate these certificate files manually from the legacy installation after migration:
 
@@ -178,7 +179,6 @@ For more information, see the installation section for comprehensive guidance on
 
 
 == Migrating
-
 
 Execute the following command to install a new {productname} server, replacing **<oldserversource.fqdn>** with the appropriate FQDN of the old server:
 
