Fix Server/Proxy repository enablement instructions (#3451)
* Fix Server/Proxy repository enablement instructions

* Update CHANGELOG.md

---------

Co-authored-by: Karl Eichwalder <ke@suse.de>

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/server-deployment-uyuni.adoc
@@ -54,7 +54,7 @@ transactional-update shell
 . Add the following repository to your {leapmicro} {microversion} server:
 +
 ----
-zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Server-POOL-x86_64-Media1/
+zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Server-POOL-$(arch)-Media1/ uyuni-server-stable
 ----
 +
 . Refresh the repository list and accept the key:
@@ -67,7 +67,7 @@ zypper ref
 +
 [source, shell]
 ----
-zypper in mgradm mgrctl mgradm-bash-completion mgrctl-bash-completion netavark uyuni-storage-setup-server
+zypper in mgradm mgrctl mgradm-bash-completion mgrctl-bash-completion uyuni-storage-setup-server
 ----
 +
 . Exit the transactional shell:
