--- a/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
@@ -37,7 +37,7 @@ Make sure that adequate testing is done before deploying the procedure in live e
 . *Make Image Accessible:* Copy the image to a web server (preferred), NFS server, or expand the [literal]``.raw`` file to add directly as a disk in a virtual environment (if supported).
 . *Boot Media:* Provide a bootable ISO ({sles} 15 SPX or {sle-micro} 5.5) to access the "Rescue System." 
   Add [literal]``netsetup=1`` on the kernel command line for networking, or configure IP via [command]``ifcfg``.
-. *Target Disk Setup:* In VMware, create:
+. *Target Disk Setup:* If applicable, in virtual machine hypervisor, create:
 .. A 40GB root disk
 .. Additional storage for persistent SUSE Manager data
 
