--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -34,7 +34,7 @@ Specifying the distribution with [option]``--distro`` is mandatory when running 
 cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
 ----
 
-You must use distribution and profile labels as listed by {cobbler}, and not simply as shown in the UI.
+You must use distribution and profile labels as listed by {cobbler}, and not simply as shown in the {webui}.
 To list the names of distributions and profiles stored by {cobbler}, run the commands:
 
 ----
