--- a/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
@@ -64,7 +64,7 @@ fdisk -l
 .. Use a disk storage utility like [literal]``blockdev`` or [literal]``lsblk`` to verify the block size against your downloaded image.
 +
 ----
-blockdev --getpbsz /dev/sda
+blockdev --getpbsz $device
 ----
 +
 ----
