Changes according to feedback.

--- a/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
@@ -35,8 +35,6 @@ Make sure that adequate testing is done before deploying the procedure in live e
 [role=procedure]
 . *Download the Image:* Download the architecture-specific [literal]``.raw.xz`` image of {productname} Server for your target block size.
 . *Make Image Accessible:* Copy the image to a web server (preferred), NFS server, or expand the [literal]``.raw`` file to add directly as a disk in a virtual environment (if supported).
-. *Boot Media:* Provide a bootable ISO ({sles} 15 SPX or {sle-micro} 5.5) to access the "Rescue System." 
-  Add [literal]``netsetup=1`` on the kernel command line for networking, or configure IP via [command]``ifcfg``.
 . *Target Disk Setup:* If applicable, in virtual machine hypervisor, create:
 .. A 40GB root disk
 .. Additional storage for persistent SUSE Manager data
@@ -44,7 +42,9 @@ Make sure that adequate testing is done before deploying the procedure in live e
 											
 .Procedure: Installation Steps
 [role=procedure]										
-. *Prepare Network and Boot Environment*
+. *Prepare Boot Environment and Network*
+.. Provide a bootable ISO ({sles} 15 SPX or {sle-micro} 5.5) to access the "Rescue System."
+   Add [literal]``netsetup=1`` on the kernel command line for networking, or configure IP via [command]``ifcfg``.
 .. Create a new instance, attach the root and persistent storage, then attach the {sles} or {sle-micro} ISO as a virtual CD.
 .. Boot the instance to the ISO, selecting the [literal]``Rescue System``.
 .. Add the following on the command line to enable network configuration.
