--- a/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
@@ -81,7 +81,7 @@ curl -Sks $url | xz -d > $device -v
 .. Replace [literal]``$url``  with the image URL and [literal]``$device`` with the root partition device.
 . *Finalize Boot and Configuration*
 .. Power off the instance, remove the virtual CD from the boot sequence, and start it again to boot from the newly created instance.
-.. Follow on-screen installation directions and, if needed, register with {scc}, adding the SUSE Manager Server Extension.
+.. Follow on-screen installation directions and, if needed, register with {scc}, adding the {productname} Server Extension.
 . *Install VMware Tools (if applicable)*
 .. Install the [literal]``open-vm-tools``
 +
