--- a/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
@@ -96,4 +96,4 @@ transactional-update pkg install open-vm-tools
 mgr-storage-server $device
 ----
 +
-Ensure [literal]``$device`` points to the fast, persistent storage added in VMware.
+Ensure [literal]``$device`` points to the fast, persistent storage.
