More changes according to feedback.

--- a/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
+++ b/modules/common-workflows/pages/workflow-install-from-raw-image.adoc
@@ -34,7 +34,7 @@ Make sure that adequate testing is done before deploying the procedure in live e
 .Procedure: Prepare the Prerequisites
 [role=procedure]
 . *Download the Image:* Download the architecture-specific [literal]``.raw.xz`` image of {productname} Server for your target block size.
-. *Make Image Accessible:* Copy the image to a web server (preferred), NFS server, or expand the [literal]``.raw`` file to add directly as a disk in a virtual environment (if supported).
+. *Make Image Accessible:* Copy the image to a web server (preferred), or expand the [literal]``.raw`` file to add directly as a disk in a virtual environment (if supported).
 . *Target Disk Setup:* If applicable, in virtual machine hypervisor, create:
 .. A 40GB root disk
 .. Additional storage for persistent SUSE Manager data
