--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -64,11 +64,11 @@ After the migration, it will be necessary to manually update the DHCP and DNS re
 ====
 The migration can take a very long time depending on the amount of data that needs to be replicated.
 
-To reduce downtime it is possible to run the migration multiple times in a process of _initial replication_, _re-replication_, or  _final replication and switch over_ while all the services on the source can stay up and running.
+To reduce downtime it is possible to run the migration multiple times in a process of _initial replication_, _re-replication_, or  _final replication and switch over_ while all the services on the old server can stay up and running.
 
-Only during the final migration the processes on the source need to be stopped.
+Only during the final migration the processes on the old server need to be stopped.
 
-For all non-final replications add the parameter [command]``--prepare`` to prevent the automatic stopping the services on the source server.
+For all non-final replications add the parameter [command]``--prepare`` to prevent the automatic stopping the services on the old server.
 For example:
 ----
 mgradm migrate podman <oldserver.fqdn> --prepare
