--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -58,6 +58,20 @@ After the migration, it will be necessary to manually update the DHCP and DNS re
 
 == Migration
 
+[IMPORTANT]
+====
+The migration can take a very long time depending on the amount of data that needs to be replicated.
+To reduce downtime it is possible to run the migration multiple times in a process of _initial replication_, _re-replication_, or  _final replication and switch over_ while all the services on the old server can stay up and running.
+
+Only during the final migration the processes on the old server need to be stopped.
+
+For all non-final replications add the parameter [command]``--prepare`` to prevent the automatic stopping the services on the old server.
+For example:
+----
+mgradm migrate podman <oldserver.fqdn> --prepare
+----
+====
+
 === Initial Preparation on the Old 4.3 Server
 
 .Procedure: Initial preparation on the 4.3 server
