Admonition formatted in line with documentation  guidelines (#3483)
* Admonition formatted in line with documentation  guidelines.

* Cont.

* Cont.

* Replaced source with 'old server'.

--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/migrate-uyuni-to-a-container.adoc
@@ -43,12 +43,18 @@ After the migration, it will be necessary to manually update the DHCP and DNS re
 [IMPORTANT]
 ====
 The migration can take a very long time depending on the amount of data that needs to be replicated.
-To reduce downtime it is possible to run the migration multiple times in a process of "initial replication", "re-replication", "final replication and switch over" while all the services on the source can stay up and running and only during the final migration the processes on the source need to be stopped.
-For all "non-final" replications add the parameter [command]``--prepare`` to prevent the automatic stopping the services on the source server.
-For example, use [command]``mgradm migrate podman <oldserver.fqdn> --prepare`` to prevent the automatic stopping the services on the source server.
+To reduce downtime it is possible to run the migration multiple times in a process of _initial replication_, _re-replication_, or  _final replication and switch over_ while all the services on the old server can stay up and running.
+
+Only during the final migration the processes on the old server need to be stopped.
+
+For all non-final replications add the parameter [command]``--prepare`` to prevent the automatic stopping the services on the old server.
+For example:
+----
+mgradm migrate podman <oldserver.fqdn> --prepare
+----
 ====
 
-.Procedure: Initial preparation on the legacy server
+.Procedure: Initial Preparation on the Legacy Server
 
 . Stop the {productname} services:
 +
@@ -141,6 +147,7 @@ mgradm migrate podman <oldserver.fqdn>
 
 
 ==== Migration of the Certificates
+
 Trusted SSL CA certificates that were installed as part of an RPM and stored on a legacy {productname} in the [path]``/usr/share/pki/trust/anchors/`` directory will not be migrated.
 Because {suse} does not install RPM packages in the container, the administrator must migrate these certificate files manually from the legacy installation after migration:
 
@@ -172,7 +179,6 @@ For more information, see the installation section for comprehensive guidance on
 
 
 == Migrating
-
 
 Execute the following command to install a new {productname} server, replacing **<oldserversource.fqdn>** with the appropriate FQDN of the old server:
 
