on 5.0, use mgrctl

--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -31,22 +31,22 @@ Specifying the distribution with [option]``--distro`` is mandatory when running 
 [option]``--iso`` is the output location:
 
 ----
-cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
+mgrctl exec -- cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
 ----
 
 You must use distribution and profile labels as listed by {cobbler}, and not simply as shown in the {webui}.
 To list the names of distributions and profiles stored by {cobbler}, run the commands:
 
 ----
-cobbler distro list
-cobbler profile list
+mgrctl exec -- cobbler distro list
+mgrctl exec -- cobbler profile list
 ----
 
 The boot ISO includes all profiles and systems by default.
 You can limit which profiles and systems are used with the [option]``--profiles`` and [option]``--systems`` options:
 
 ----
-cobbler buildiso --systems="system1 system2 system3" \
+mgrctl exec -- cobbler buildiso --systems="system1 system2 system3" \
   --profiles="<your-profile1-label> <your-profile2-label> <your-profile3-label>" \
   --distro=<your-distro-label>
 ----
@@ -57,7 +57,7 @@ You explicitly specify the EFI System Partition (ESP).
 By default, {cobbler} searches for the ESP, and generates one if not found.
 
 ----
-cobbler buildiso \
+mgrctl exec -- cobbler buildiso \
   --esp="/usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/efi" \
   --iso=--iso=/path/to/boot.iso --distro=<your-distro-label>
 ----
