Apply suggestions from code review
Co-authored-by: Marek Czernek <marek.czernek@suse.com>

--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -52,14 +52,14 @@ mgrctl exec -- cobbler buildiso --systems="system1 system2 system3" \
 ----
 
 
-With [option]``--esp`` you can enable the build boot ISOs with Secure Boot.
+With [option]``--esp`` you can enable the built boot ISOs with Secure Boot.
 You explicitly specify the EFI System Partition (ESP).
-By default, {cobbler} searches for the ESP, and generates one if not found.
+By default, {cobbler} generates the ESP partition, which disables Secure Boot.
 
 ----
 mgrctl exec -- cobbler buildiso \
   --esp="/usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/efi" \
-  --iso=--iso=/path/to/boot.iso --distro=<your-distro-label>
+  --iso=/path/to/boot.iso --distro=<your-distro-label>
 ----
 
 
