--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -63,6 +63,39 @@ mgrctl exec -- cobbler buildiso \
 ----
 
 
+
+.Procedure: Finding [literal]``efi``
+
+. Execute [command]``cobbler distro list`` to get the [option]``distro`` name:
++
+----
+cobbler distro list
+----
++
+This command outputs strings such as [literal]``sles15-sp6:1:SUSE``.
+
+. Execute [command]``cobbler distro report`` to get information about the [option]``distro`` files location:
++
+----
+cobbler distro report --name sles15-sp6:1:SUSE
+----
++
+This command outputs a report such as the following:
++
+----
+Name                           : sles15-sp6:1:SUSE
+Architecture                   : x86_64
+...output omitted...
+Initrd                         : /usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/loader/initrd
+Kernel                         : /usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/loader/linux
+...output omitted...
+----
+
+. See the contents of the boot directory.
+  In the example above, the boot partition is the [path]``/usr/share/tftpboot-installation/SLE-15-SP4-x86_64/boot/x86_64/efi`` file, but this can differ based on the ISO distributor.
+
+
+
 [NOTE]
 ====
 If you cannot write an ISO image to a public [path]``tmp`` directory, check your systemd settings in [path]``/usr/lib/systemd/system/cobblerd.service``.
