--- a/modules/specialized-guides/pages/salt/salt-connectivity.adoc
+++ b/modules/specialized-guides/pages/salt/salt-connectivity.adoc
@@ -1,5 +1,5 @@
 [[salt-connectivity]]
-= Salt Connectivity
+= {Salt} Connectivity
 
 Depending on the size and spreadness of the environment where {productname} is used some connectivity issues are possible.
 There are no common recommendations for all the possible use cases as the environments could be very different expecially if public clouds instances are involved.
@@ -10,10 +10,10 @@ There are no common recommendations for all the possible use cases as the enviro
 == Minions Connectivity
 
 In case clients are losing the connection to the {productname} Server (or {productname} Proxy if involved), they are unreachable from the {productname} Server {webui} or with command line tools.
-To understand such a connection issue check if the client is not reachable from the {productname} Server with [command]``salt MINION_ID test.ping``, while [command]``venv-salt-call test.ping`` or ([command]``salt-call test.ping`` in case if non-bundle salt is used on the client) is working fine on the client side.
+To understand such a connection issue check if the client is not reachable from the {productname} Server with [command]``salt MINION_ID test.ping``, while [command]``venv-salt-call test.ping`` (or [command]``salt-call test.ping`` if non-bundle {salt} is used on the client) is working fine on the client side.
 If this is the case, it is recommended to set [literal]``tcp_keepalive`` parameters.
 
-The parameters with the values from the example below could be used as a starting point to look for the better combination, which could prevent cases of connection loss without restoring for some environments.
+The parameters with the values from the example below can be used as a starting point to look for settings, which could prevent cases of connection loss without restoring for some environments.
 It is recommended to put the parameters in the separate drop-in configuration file like [path]``/etc/venv-salt-minion/minion.d/tuning-keepalives.conf`` or [path]``/etc/salt/minion.d/tuning-keepalives.conf``, depending on the minion type used on the client side.
 
 .Example: Keepalive parameters example values
@@ -53,36 +53,33 @@ tcp_keepalive_intvl: 10
 [[proxies-connectivity]]
 == Proxies Connectivity
 
-[command]``salt-broker`` service is used on {productname} Proxies to forward `salt` traffic between the {productname} Server and [command]``salt-minion`` service used on the client side.
+[command]``salt-broker`` service is used on {productname} Proxies to forward {salt} traffic between the {productname} Server and [command]``salt-minion`` service used on the client side.
 It is possible that [command]``salt-broker`` and all the clients behind it could be affected with the same issue as the clients directly connected to the {productname} Server.
 The issue could be fixed with the same parameters as recommended for the minions, but specified in [path]``/etc/salt/broker`` on each {productname} Proxy.
 
 
-The other possible issue which {productname} Proxy can be affected with is the case when the connectivity to the {productname} Server
-is lost for quite long interval, so the clients behind it started to retry the authentication to the [command]``salt-master`` service on the {productname} Server.
-This situation could be potentially dangerous as it could lead to collecting large amount of ZeroMQ messages with authentication attemps
-in the interal buffer of ZeroMQ sockets used inside the [command]``salt-broker`` service, so that on restoring the connection to the [command]``salt-master``
-all of the messages will be pushed to it.
-It could lead to the issues on {productname} Server side with [command]``salt-master`` service, as it could be impossible to serve all the cached requests in apropriate time or even to the complete denial of the service.
+{productname} Proxy connectivity can also suffer when the connectivity to the {productname} Server is lost for a quite long interval.
+In such a case Proxy connected clients started to retry the authentication to the [command]``salt-master`` service on the {productname} Server.
+This situation could be potentially dangerous because it could lead to collecting large amount of ZeroMQ messages with authentication attemps in the interal buffer of ZeroMQ sockets used inside the [command]``salt-broker`` service.
+Then, on restoring the connection to the [command]``salt-master`` all of the pending messages will be pushed to it.
+It could lead to the issues on {productname} Server side with [command]``salt-master`` service, because it could be impossible to serve all the cached requests in appropriate time or even to the complete denial of the service.
 
-To avoid such situation a set of extra parameters was introduced.
-The most important one is [option]``wait_for_backend``, which should be set to [literal]``True``.
+To avoid such situation a set of tuning parameters is available.
+As the most important one, [option]``wait_for_backend`` should be set to [literal]``True``.
 This prevents opening the sockets for the clients behind the proxy while the connectivity to the [command]``salt-master`` service is not established.
 In this case the messages from the clients are not collected in the internal buffers.
 ``drop_after_retries`` is setting the number of retries before closing the sockets to drop the cached messages.
-The other parameters could help to fine tune the behaviour for the environment.
+The other parameters could help to fine tune the behavior for the environment.
 
 [NOTE]
 ====
-Setting timeouts, intervals and ``drop_after_retries`` to lower values are making [command]``salt-broker`` service more aggressive on detecting the connection loss to the [command]``salt-master``, so that it puts the clients behind the proxy to the conditions closer as they are connected
-directly to the {productname} Server.
-On the other hand increasing the values could provide some benefits in case if the network channel between the {productname} Proxy and
-{productname} Server is not stable enough, the message buffering can provide some flexibility while re-establishing the connection.
+Setting timeouts, intervals and ``drop_after_retries`` to lower values are making [command]``salt-broker`` service more aggressive on detecting the connection loss to the [command]``salt-master``, so that it puts the clients behind the proxy to the conditions closer as they are connected directly to the {productname} Server.
+Increasing the values could provide some benefits in case if the network channel between the {productname} Proxy and {productname} Server is not stable enough, the message buffering can provide some flexibility while re-establishing the connection.
 ====
 
 
 
-.Example: Keepalive parameters example values
+.Example: Values for Keepalive Parameters
 
 ----
 ######   ZeroMQ connection options    ######
