--- a/modules/administration/pages/troubleshooting/tshoot-corruptrepo.adoc
+++ b/modules/administration/pages/troubleshooting/tshoot-corruptrepo.adoc
@@ -27,7 +27,7 @@ With an new repository data file, updates should operate as expected.
 .Procedure: Resolving Corrupt Repository Data
 . Remove all files from [path]``/var/cache/rhn/repodata/<channel-label>``.
     If you do not know the channel label, you can find it in the {productname} {webui}, by navigating to menu:Software[Channels > Channel Label].
-. On the container host, regenerate the file from the command line:
+. On the container host, execute from the command line to regenerate the file in the container:
 +
 ----
 mgrctl exec -ti -- spacecmd softwarechannel_regenerateyumcache <channel-label>
