--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -29,31 +29,73 @@ For information about creating a profile, see xref:client-configuration:autoinst
 The {cobbler} [command]``buildiso`` command takes parameters to define the name and output location of the boot ISO.
 
 Specifying the distribution with [option]``--distro`` is mandatory when running [command]``buildiso`` command.
+[option]``--iso`` is the output location:
 
 ----
-cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
+mgrctl exec -- cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
 ----
 
-[IMPORTANT]
-====
-You must use distro and profile labels as listed by {cobbler}, and not simply as shown in the UI.
-====
-
+You must use distribution and profile labels as listed by {cobbler}, and not simply as shown in the {webui}.
 To list the names of distributions and profiles stored by {cobbler}, run the commands:
 
 ----
-# cobbler distro list
-# cobbler profile list
+mgrctl exec -- cobbler distro list
+mgrctl exec -- cobbler profile list
 ----
 
 The boot ISO includes all profiles and systems by default.
-You can limit which profiles and systems are used with the [option]``--profiles`` and [option]``--systems`` options.
-For example:
+You can limit which profiles and systems are used with the [option]``--profiles`` and [option]``--systems`` options:
 
 ----
-cobbler buildiso --systems="system1 system2 system3" \
-  --profiles="<your-profile1-label> <your-profile2-label> <your-profile3-label> --distro=<your-distro-label>
+mgrctl exec -- cobbler buildiso --systems="system1 system2 system3" \
+  --profiles="<your-profile1-label> <your-profile2-label> <your-profile3-label>" \
+  --distro=<your-distro-label>
 ----
+
+
+With [option]``--esp`` you can enable the built boot ISOs with Secure Boot.
+You explicitly specify the EFI System Partition (ESP).
+By default, {cobbler} generates the ESP partition, which disables Secure Boot.
+
+----
+mgrctl exec -- cobbler buildiso \
+  --esp="/usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/efi" \
+  --iso=/path/to/boot.iso --distro=<your-distro-label>
+----
+
+
+
+.Procedure: Finding [literal]``efi``
+
+. Execute [command]``cobbler distro list`` to get the [option]``distro`` name:
++
+----
+cobbler distro list
+----
++
+This command outputs strings such as [literal]``sles15-sp6:1:SUSE``.
+
+. Execute [command]``cobbler distro report`` to get information about the [option]``distro`` files location:
++
+----
+cobbler distro report --name sles15-sp6:1:SUSE
+----
++
+This command outputs a report such as the following:
++
+----
+Name                  : sles15-sp6:1:SUSE
+Architecture          : x86_64
+...output omitted...
+Initrd                : /usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/loader/initrd
+Kernel                : /usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/loader/linux
+...output omitted...
+----
+
+. See the contents of the boot directory.
+  In the example above, the boot partition is the [path]``/usr/share/tftpboot-installation/SLE-15-SP4-x86_64/boot/x86_64/efi`` file, but this can differ based on the ISO distributor.
+
+
 
 [NOTE]
 ====
