--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -32,22 +32,22 @@ Specifying the distribution with [option]``--distro`` is mandatory when running 
 [option]``--iso`` is the output location:
 
 ----
-mgrctl exec -- cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
+cobbler buildiso --iso=/path/to/boot.iso --distro=<your-distro-label>
 ----
 
 You must use distribution and profile labels as listed by {cobbler}, and not simply as shown in the {webui}.
 To list the names of distributions and profiles stored by {cobbler}, run the commands:
 
 ----
-mgrctl exec -- cobbler distro list
-mgrctl exec -- cobbler profile list
+cobbler distro list
+cobbler profile list
 ----
 
 The boot ISO includes all profiles and systems by default.
 You can limit which profiles and systems are used with the [option]``--profiles`` and [option]``--systems`` options:
 
 ----
-mgrctl exec -- cobbler buildiso --systems="system1 system2 system3" \
+cobbler buildiso --systems="system1 system2 system3" \
   --profiles="<your-profile1-label> <your-profile2-label> <your-profile3-label>" \
   --distro=<your-distro-label>
 ----
@@ -58,8 +58,8 @@ You explicitly specify the EFI System Partition (ESP).
 By default, {cobbler} generates the ESP partition, which disables Secure Boot.
 
 ----
-mgrctl exec -- cobbler buildiso \
-  --esp="/usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/efi" \
+cobbler buildiso \
+  --esp="/usr/share/tftpboot-installation/SLE-15-SP4-x86_64/boot/x86_64/efi" \
   --iso=/path/to/boot.iso --distro=<your-distro-label>
 ----
 
@@ -73,21 +73,21 @@ mgrctl exec -- cobbler buildiso \
 cobbler distro list
 ----
 +
-This command outputs strings such as [literal]``sles15-sp6:1:SUSE``.
+This command outputs strings such as [literal]``sles15-sp4:1:SUSE``.
 
 . Execute [command]``cobbler distro report`` to get information about the [option]``distro`` files location:
 +
 ----
-cobbler distro report --name sles15-sp6:1:SUSE
+cobbler distro report --name sles15-sp4:1:SUSE
 ----
 +
 This command outputs a report such as the following:
 +
 ----
-Name                  : sles15-sp6:1:SUSE
+Name                  : sles15-sp4:1:SUSE
 Architecture          : x86_64
 ...output omitted...
-Initrd                : /usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/loader/initrd
+Initrd                : /usr/share/tftpboot-installation/SLE-15-SP4-x86_64/boot/x86_64/loader/initrd
 Kernel                : /usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/loader/linux
 ...output omitted...
 ----
