--- a/modules/client-configuration/pages/autoinst-cdrom.adoc
+++ b/modules/client-configuration/pages/autoinst-cdrom.adoc
@@ -66,18 +66,18 @@ mgrctl exec -- cobbler buildiso \
 
 .Procedure: Finding [literal]``efi``
 
-. Execute [command]``cobbler distro list`` to get the [option]``distro`` name:
+. On the container host, execute the following command to get the [option]``distro`` name:
 +
 ----
-cobbler distro list
+mgrctl exec -- cobbler distro list
 ----
 +
 This command outputs strings such as [literal]``sles15-sp6:1:SUSE``.
 
-. Execute [command]``cobbler distro report`` to get information about the [option]``distro`` files location:
+. On the container host, execute the following command to get information about the [option]``distro`` files location:
 +
 ----
-cobbler distro report --name sles15-sp6:1:SUSE
+mgrctl exec -- cobbler distro report --name sles15-sp6:1:SUSE
 ----
 +
 This command outputs a report such as the following:
@@ -92,7 +92,7 @@ Kernel                : /usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/
 ----
 
 . See the contents of the boot directory.
-  In the example above, the boot partition is the [path]``/usr/share/tftpboot-installation/SLE-15-SP4-x86_64/boot/x86_64/efi`` file, but this can differ based on the ISO distributor.
+  In the example above, the boot partition is the [path]``/usr/share/tftpboot-installation/SLE-15-SP6-x86_64/boot/x86_64/efi`` file, but this can differ based on the ISO distributor.
 
 
 
