--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -8,7 +8,7 @@ This table outlines hardware and software requirements for the {productname} Ser
 [WARNING]
 ====
 {productname} installations based on {ppc64le} or {s390x} architecture cannot use secure boot for network booting clients.
-This limitation exists because shim is not available for both these architectures.
+This limitation exists because the shim bootloader is not available for both these architectures.
 ====
 endif::[]
 
