mention local directory also in the docker section

--- a/modules/administration/pages/image-management.adoc
+++ b/modules/administration/pages/image-management.adoc
@@ -156,8 +156,9 @@ If your container image tag is in a format such as `myproject/myimage`, make sur
 . Use `Dockerfile` as the [guimenu]``Image Type``.
 . Use the drop-down menu to select your registry from the [guimenu]``Target Image Store`` field.
 . In the [guimenu]``Path`` field, type a GitHub, GitLab, or BitBucket repository URL.
+  The path can also be a local directory on the build host.
   The URL should be [literal]``http``, [literal]``https``, or a token authentication URL.
-  Use one of these formats:
+  For GitHub or GitLab, use one of these formats:
 +
 .GitHub Path Options
 * GitHub single user project repository
