--- a/modules/installation-and-upgrade/pages/install-proxy-vm.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy-vm.adoc
@@ -1,5 +1,5 @@
 [[install-proxy-vm]]
-= Install {productname} Proxy in a Virtual Machine Environment Using {productname} Proxy VM Image
+= Install {productname} Proxy in a Virtual Machine Environment Using {productname} Proxy KVM Image
 
 
 
