--- a/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
+++ b/modules/installation-and-upgrade/nav-installation-and-upgrade-guide.adoc
@@ -56,7 +56,8 @@ endif::[]
 
 ifeval::[{suma-content} == true]
 **** xref:install-proxy.adoc[Install Proxy from Packages]
-**** xref:install-proxy-vm.adoc[Install Proxy Using Virtual Machine Image]
+**** xref:install-proxy-vm.adoc[Install Proxy Using Virtual Machine Image - KVM]
+**** xref:install-proxy-vmdk.adoc[Install Proxy Using Virtual Machine Image - VMware]
 endif::[]
 
 **** xref:proxy-container-installation.adoc[Install Containerized Proxy]
