--- a/modules/installation-and-upgrade/pages/install-proxy-vmdk.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy-vmdk.adoc
@@ -1,11 +1,9 @@
-[[install-proxy-vm]]
+[[install-proxy-vmdk]]
 = Install {productname} Proxy in a Virtual Machine Environment Using {productname} Proxy VMware Image
 
 
 
-== Virtual Machine Manager Settings
-
-...
+== Virtual Machine Settings
 
 You will find the VM images for {productname} {productnumber} Proxy in various formats.
 It includes {sles} {sles-version} {sp-base} as the underlying operating system and the {productname} Proxy software current at the time of build.
@@ -64,6 +62,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 . At the JeOS Firstboot screen select start to continue and check the following configuration dialogs (keyboard layout, license agreement, time zone, password for root).
 
+
 . When installation completes log in as root.
 
-. Proceed with xref:installation-and-upgrade:install-vm.adoc#minimal.susemgr.prep[].
+. For registering {productname} Proxy with SCC, preparing  {productname} Proxy storage, and further steps, proceed with xref:installation-and-upgrade:install-vm.adoc#minimal.susemgrproxy.prep[].
