--- a/modules/installation-and-upgrade/pages/install-proxy-vmdk.adoc
+++ b/modules/installation-and-upgrade/pages/install-proxy-vmdk.adoc
@@ -65,4 +65,4 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 . When installation completes log in as root.
 
-. For registering {productname} Proxy with SCC, preparing  {productname} Proxy storage, and further steps, proceed with xref:installation-and-upgrade:install-vm.adoc#minimal.susemgrproxy.prep[].
+. For registering {productname} Proxy with SCC, preparing  {productname} Proxy storage, and further steps, proceed with xref:installation-and-upgrade:install-proxy-vm.adoc#minimal.susemgrproxy.prep[].
