--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -76,7 +76,7 @@ This sections describes VMware configurations, focusing on the creation of an ex
 
 
 
-[[minimal.susemgr.prep]]
+[[minimal.susemgrproxy.prep]]
 == Register {sle-micro} and {productname} {productnumber} Proxy
 
 // Before starting obtain your SUSE Manager Registration Code from SUSE Customer Center - https://scc.suse.com.
