--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -9,17 +9,26 @@ Only {opensuse} Leap 15.3 and newer are supported to be used as container host f
 endif::[]
 
 ifeval::[{suma-content} == true]
-Only {sles} 15 SP3 and newer are supported to be used as container host for {productname} Proxy containers.
+
+{productname} Proxy containers are supported only on {sles} 15 SP3 and newer versions.
 endif::[]
 ====
 
-The container host must be connected to {productname} as a {salt} client.
-Connecting the container host as a traditional client will not work because required packages will not be available.
+To be used as a base for {productname} Proxy, container first needs to be registered as a {salt} client to the {productname} Server.
+[literal]``Containers Module`` is also required to be available for the container host.
 
+Connecting the container host as a traditional client will not work because required packages are not available.
+
+For more information about registering {salt} client to the {productname} Server, see xref:client-configuration:registration-overview.adoc[].
 
 
 [[installation-proxy-containers-requirements]]
 == Container Host Requirements
+
+To ensure that the domain name of the {productname} Server can be resolved by the clients:
+
+* Both container proxy and client machines must be connected to a DNS server
+* Reverse lookup must work
 
 
 [cols="1,1,1", options="header"]
@@ -63,29 +72,17 @@ Connecting the container host as a traditional client will not work because requ
 
 |===
 
-[IMPORTANT]
-====
-To ensure that the domain name of the {productname} Server can be resolved by the clients:
-
-* Both container proxy and client machines must be connected to a DNS server
-* Reverse lookup must work
-====
-
 
 
 [[installation-proxy-containers-services]]
-== Install Container Services on the host system
+== Install Container Services on the Host System
 
 [NOTE]
 ====
-Container host to be used as a base for {productname} Proxy containers needs to be first registered as a Salt client to the {productname} Server.
+* [literal]``Containers Module`` is required to be available for container host.
 
-For more information about registering Salt client to the {productname} Server, see xref:client-configuration:registration-overview.adoc[].
-====
-
-[NOTE]
-====
-[literal]``Containers Module`` is required to be available for container host.
+* Container host to be used as a base for {productname} Proxy containers needs to be first registered as a {salt} client to the {productname} Server.
+ For more information about registering {salt} client to the {productname} Server, see xref:client-configuration:registration-overview.adoc[].
 ====
 
 {productname} Proxy containers are using [literal]``podman`` and [literal]``systemd`` to run and manage all proxy containers.
@@ -107,11 +104,19 @@ For more information about assigning software channels to the system, see xref:a
 ----
 zypper install uyuni-proxy-systemd-services
 ----
++
+[IMPORTANT]
+====
+Package [literal]``uyuni-proxy-systemd-service`` comes from the following channels:
+
+* SLE-Manager-Tools_15
+* SLE-Manager-Tools-For-Micro_5 in the case of {sle-micro}
+====
 
 
 
 [[installation-proxy-containers-customize-config]]
-== Customize {productname} Proxy configuration
+== Customize {productname} Proxy Configuration
 
 {productname} Proxy containers require some volumes to be mounted for long term storage.
 Those volumes are automatically created by [literal]``podman`` and can be listed using the [command]``podman volume ls`` command.
