--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vmdk-suma.adoc
@@ -100,7 +100,7 @@ transactional-update register -r <REGCODE> -e <your_email>
 transactional-update register -p SUSE-Manager-Proxy/5.0/x86_64 -r <REGCODE>
 ----
 
-. Reboot
+. Reboot.
 
 . Update the system:
 +
