Converted admonition to plain text.

--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -1,8 +1,8 @@
 [[installation-proxy-containers]]
 = Install Containerized {productname} Proxy
 
-[NOTE]
-====
+
+== Introduction
 
 ifeval::[{uyuni-content} == true]
 Only {opensuse} Leap 15.3 and newer are supported to be used as container host for {productname} Proxy containers.
@@ -12,7 +12,6 @@ ifeval::[{suma-content} == true]
 
 {productname} Proxy containers are supported only on {sles} 15 SP3 and newer versions.
 endif::[]
-====
 
 To be used as a base for {productname} Proxy, container first needs to be registered as a {salt} client to the {productname} Server.
 [literal]``Containers Module`` is also required to be available for the container host.
@@ -67,8 +66,8 @@ To ensure that the domain name of the {productname} Server can be resolved by th
 | Remark
 
 | Connection Method
-| Salt
-| Host must be configured as a Salt client
+| {salt}
+| Host must be configured as a {salt} client
 
 |===
 
@@ -76,14 +75,6 @@ To ensure that the domain name of the {productname} Server can be resolved by th
 
 [[installation-proxy-containers-services]]
 == Install Container Services on the Host System
-
-[NOTE]
-====
-* [literal]``Containers Module`` is required to be available for container host.
-
-* Container host to be used as a base for {productname} Proxy containers needs to be first registered as a {salt} client to the {productname} Server.
- For more information about registering {salt} client to the {productname} Server, see xref:client-configuration:registration-overview.adoc[].
-====
 
 {productname} Proxy containers are using [literal]``podman`` and [literal]``systemd`` to run and manage all proxy containers.
 
