--- a/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
+++ b/modules/installation-and-upgrade/pages/proxy-container-installation.adoc
@@ -78,7 +78,7 @@ To ensure that the domain name of the {productname} Server can be resolved by th
 
 {productname} Proxy containers are using [literal]``podman`` and [literal]``systemd`` to run and manage all proxy containers.
 
-First step is to install container control files provided by package [literal]``uyuni-proxy-systemd-services``.
+The first step is to install container control files provided by package [literal]``uyuni-proxy-systemd-services``.
 
 
 [[proc-installation-proxy-containers-services]]
@@ -91,7 +91,6 @@ For more information about assigning software channels to the system, see xref:a
 
 . Manually install {productname} Proxy service package:
 +
-
 ----
 zypper install uyuni-proxy-systemd-services
 ----
@@ -139,7 +138,7 @@ Changing the [path]``uyuni-proxy-systemd-services.config`` file and especially t
 
 
 
-=== Using a custom container image for a service
+=== Using a Custom Container Image for a Service
 
 By default, the {productname} Proxy suite is set to use the same image version and registry path for each of its services.
 However, it is possible to override the default values for a specific service.
@@ -170,7 +169,7 @@ For more information, see [command]``uyuni-proxy --help``.
 
 
 [[installation-proxy-containers-firewall-rules]]
-== Allow network access for provided services on container host firewall
+== Allow Network Access for Provided Services on Container Host Firewall
 
 {productname} Proxy containers work as so called node-port service.
 This means proxy container pod shares container host network TCP and UDP port space.
